--- a/paskaita_3_new.ipynb
+++ b/paskaita_3_new.ipynb
@@ -775,6 +775,572 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# List Comprehension"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# sutrumpintas for ciklas"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 247,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[3, 6, 9, 12, 15, 18]\n"
+     ]
+    }
+   ],
+   "source": [
+    "numbers = list(range(1,21))\n",
+    "dividible_by_3 = [] # sarasas, i kuri saugom rezult\n",
+    "for number in numbers:\n",
+    "    if number % 3 == 0:\n",
+    "        dividible_by_3.append(number)\n",
+    "        # print (number)\n",
+    "print(dividible_by_3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 259,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20]\n",
+      "[0.5, 1.0, 1.5, 2.0, 2.5, 3.0, 3.5, 4.0, 4.5, 5.0, 5.5, 6.0, 6.5, 7.0, 7.5, 8.0, 8.5, 9.0, 9.5, 10.0]\n",
+      "[3, 6, 9, 12, 15, 18]\n",
+      "[9, 36, 81, 144, 225, 324]\n",
+      "[(3, 9), (6, 36), (9, 81), (12, 144), (15, 225), (18, 324)]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# list comprehenion sutrumpina ta visa [247]\n",
+    "\n",
+    "print(numbers)\n",
+    "dividible_by_3 = [number/2 for number in numbers ] # for ciklas vienoje eiluteje\n",
+    "print(dividible_by_3)\n",
+    "dividible_by_3 = [number for number in numbers if number % 3 == 0]\n",
+    "print(dividible_by_3)\n",
+    "dividible_by_3 = [number ** 2 for number in numbers if number % 3 == 0] # number ** 2 eina kaip vienas narys rezultate\n",
+    "print(dividible_by_3)\n",
+    "dividible_by_3 = [(number, number ** 2) for number in numbers if number % 3 == 0] # rezultatas bus vienas narys tuple, kuris yra org skaicius ir skaicius pakeltas **\n",
+    "print(dividible_by_3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 261,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[100, 100, 3, 100, 100, 6, 100, 100, 9, 100, 100, 12, 100, 100, 15, 100, 100, 18, 100, 100]\n"
+     ]
+    }
+   ],
+   "source": [
+    "dividible_by_3 = [number for number in numbers if number % 3 == 0] # galime itraukti else i salyga, kokia verte ideti, jeigu skaicius nesidalina is salygos\n",
+    "# reikia perstumti tvarka\n",
+    "\n",
+    "dividible_by_3 = [number if number % 3 == 0 else 100 for number in numbers] #visur kur nesidalina is 3 bus 100\n",
+    "print(dividible_by_3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 263,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[5, 4, 8, 3, 10, 8, 16, 6, 15, 12, 24, 9, 20, 16, 32, 12]\n"
+     ]
+    }
+   ],
+   "source": [
+    "x_axis = [1,2,3,4]\n",
+    "y_axis = (5,4,8,3)\n",
+    "\n",
+    "mult = [x*y for x in x_axis for y in y_axis] # dvigubas for ckl : x*y yra rezultatas sudauginatas dvieju salygu\n",
+    "print(mult)\n",
+    "\n",
+    "# su kiekvienu x per visas y"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 266,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[5, 8, 24, 12]\n"
+     ]
+    }
+   ],
+   "source": [
+    "mult = [x*y for x,y in zip(x_axis, y_axis)] # galima sudauginti poras, is abieju paima po x ir y\n",
+    "print(mult)\n",
+    "\n",
+    "# zip paima po viena verte is abieju, uz kiekviena x ir y verte esancia abiejuose sarasuose sudaugink abidvi"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Dictionary deklaracija"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# dictionary issiskiria tuo, kad turi KEY ir VALUE \n",
+    "\n",
+    "# neturi sekos parametru, taciau galime gauti norima reiksme kreipdamiesi i reiksmes rakta,\n",
+    "# tai reiskia, kad galime skaidyti dictionary duomenis, paimti reiksme, ja pakeisti\n",
+    "\n",
+    "# rakto reiksme [''], prideti naja reiksme, isimti norima reiksme pop\n",
+    "\n",
+    "# turime raktazodi, unikalu zodi, kuris turi reiksme (kaip zodynas), ir ta reiksme gali buti bet kokia, pvz vardas,\n",
+    "# o vardas tures kazkokia specifine reiksme pvz Jonas"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 275,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "26\n",
+      "3\n",
+      "dict_values(['jonas', 'palacionis', 26])\n",
+      "dict_keys(['vardas', 'pavarde', 'amzius'])\n",
+      "{'pavarde': 'palacionis', 'amzius': 26}\n"
+     ]
+    }
+   ],
+   "source": [
+    "MD = {'vardas' : 'jonas',\n",
+    "'pavarde' : 'palacionis',\n",
+    "'amzius' : 26}\n",
+    "\n",
+    "print(MD['amzius']) # vietoje indeksu raktazodziai\n",
+    "print(len(MD))\n",
+    "print(MD.values())\n",
+    "print(MD.keys())\n",
+    "MD.pop('vardas')\n",
+    "print(MD)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Dvitaskiai atskiria poras, kaireje puse visada bus KEY, po desine bus tu key VALUES\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 277,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "my_dictionary = {\n",
+    "    'name' : 'Juste',\n",
+    "    'surname' : 'Leisyte',\n",
+    "    'age' : 24,\n",
+    "    'hobbies' : ['tennis', 'football', 'games']\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 279,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'name': 'Juste', 'surname': 'Leisyte', 'age': 24, 'hobbies': ['tennis', 'football', 'games']}\n",
+      "<class 'dict'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(my_dictionary)\n",
+    "print(type(my_dictionary))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 284,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Juste\n",
+      "['tennis', 'football', 'games']\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(my_dictionary['name'])\n",
+    "print(my_dictionary['hobbies'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 285,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'name': 'Juste', 'surname': 'Leisyte', 'age': 25, 'hobbies': ['tennis', 'football', 'games']}\n"
+     ]
+    }
+   ],
+   "source": [
+    "# perraso info, irasom KEY , kurio verte norime pakeisti ir nurodom nauja VALUE\n",
+    "my_dictionary['age'] = 25\n",
+    "print(my_dictionary)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 290,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'name': 'Juste', 'surname': 'Leisyte', 'age': 25, 'hobbies': ['tennis', 'football', 'games'], 'city': 'Vilnius'}\n",
+      "5\n"
+     ]
+    }
+   ],
+   "source": [
+    "# prideti naujus duomenis\n",
+    "\n",
+    "my_dictionary['city'] = 'Vilnius'\n",
+    "print(my_dictionary)\n",
+    "\n",
+    "# atspaudina kiek poru \n",
+    "print(len(my_dictionary))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Dictionary is mutable"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 289,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5\n"
+     ]
+    }
+   ],
+   "source": [
+    "# mutable reiskia , jei nori pasidaryti kopija dictionary ir priskirti kitam kintamajam,\n",
+    "# tai jeigu tiesiog prilygini kitam kintamajam, kopijos nepadarys, abu kintamieji rodys ta pacia vieta atmintyje\n",
+    "# ir jei vienas pasikeis kitas irgi auto pasikeicia\n",
+    "\n",
+    "# mutable - u can change its content\n",
+    "\n",
+    "my_dictionary.copy()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 295,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Vilnius\n"
+     ]
+    }
+   ],
+   "source": [
+    "my_dictionary.get('city') # grazina raktazodzio verte\n",
+    "\n",
+    "print(my_dictionary.get('city'))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 293,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "KeyError",
+     "evalue": "'car'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "\u001b[1;32mc:\\Users\\laima\\Desktop\\Python_mokymai\\Python_mokymai\\paskaita_3_new.ipynb Cell 55'\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/laima/Desktop/Python_mokymai/Python_mokymai/paskaita_3_new.ipynb#ch0000064?line=0'>1</a>\u001b[0m \u001b[39mprint\u001b[39m(my_dictionary[\u001b[39m'\u001b[39;49m\u001b[39mcar\u001b[39;49m\u001b[39m'\u001b[39;49m])\n",
+      "\u001b[1;31mKeyError\u001b[0m: 'car'"
+     ]
+    }
+   ],
+   "source": [
+    "print(my_dictionary['car'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 297,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "None\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(my_dictionary.get('car'))  # cia jei ir nera raktazodzio, vis tiek ismes ne klaida, o None, o klaida mes MD['key']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 296,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "No car\n"
+     ]
+    }
+   ],
+   "source": [
+    "# prie get galima nurodyti antra verte, kuri yra numatyta verte, jeigu key verte nera randama\n",
+    "\n",
+    "print(my_dictionary.get('car', 'No car'))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 298,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'name': 'Juste', 'surname': 'Leisyte', 'age': 25, 'hobbies': ['tennis', 'football', 'games'], 'city': 'Vilnius'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(my_dictionary)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 301,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'name': 'Juste', 'surname': 'Leisyte', 'age': 25, 'hobbies': ['tennis', 'football', 'games'], 'city': 'Vilnius', 10: 'desimt'}\n",
+      "desimt\n",
+      "{'name': 'Juste', 'surname': 'Leisyte', 'age': 25, 'hobbies': ['tennis', 'football', 'games'], 'city': 'Vilnius'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "my_dictionary[10] = 'desimt'\n",
+    "print(my_dictionary)\n",
+    "print(my_dictionary.pop(10))\n",
+    "print(my_dictionary)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 302,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'name': 'Juste', 'surname': 'Leisyte', 'age': 25, 'hobbies': ['tennis', 'football', 'games'], 'city': 'Vilnius', None: 'Niekas'}\n",
+      "{'name': 'Juste', 'surname': 'Leisyte', 'age': 25, 'hobbies': ['tennis', 'football', 'games'], 'city': 'Vilnius'}\n",
+      "None Niekas\n"
+     ]
+    }
+   ],
+   "source": [
+    "my_dictionary[None] = 'Niekas'\n",
+    "print(my_dictionary)\n",
+    "key, value = my_dictionary.popitem()  # jokiu argumentu nepriema, ji sunaikina viena pora ir ja grazina\n",
+    "print(my_dictionary)\n",
+    "print(key, value)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 307,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# update # updateina raktazodzio verte daugiau nei viena\n",
+    "\n",
+    "new_dictionary = {\n",
+    "    'name' : 'Juste',\n",
+    "    'age' : 21,\n",
+    "    'hobbies' : ['tennis', 'games']\n",
+    "}\n",
+    "\n",
+    "my_dictionary.update(new_dictionary) #naudoja sena zodyna ir nurodo nauja dict pagal kuri bus atnaujinamos vertes\n",
+    "\n",
+    "# jeigu norime sita info ikelti i pirmini zodyna, galima naudoti update"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 308,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'name': 'Juste', 'surname': 'Leisyte', 'age': 21, 'hobbies': ['tennis', 'games'], 'city': 'Vilnius'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(my_dictionary)\n",
+    "# hobiai sumazejo vienu nariu ir pasikeite amzius, vardas yra tik vienas ir isliko same\n",
+    "#negali egzistuoti du identiski raktazodziai, isliks tik paskutinio raktazodzio verte"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 310,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Juste\n",
+      "Leisyte\n",
+      "21\n",
+      "['tennis', 'games']\n",
+      "Vilnius\n"
+     ]
+    }
+   ],
+   "source": [
+    "for value in my_dictionary.values():\n",
+    "    print(value)\n",
+    "\n",
+    "#atspausdina visas vertes is dictionary"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 313,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "name\n",
+      "surname\n",
+      "age\n",
+      "hobbies\n",
+      "city\n"
+     ]
+    }
+   ],
+   "source": [
+    "for key in my_dictionary.keys():\n",
+    "    print(key)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 317,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "key name has a value of Juste\n",
+      "key surname has a value of Leisyte\n",
+      "key age has a value of 21\n",
+      "key hobbies has a value of ['tennis', 'games']\n",
+      "key city has a value of Vilnius\n"
+     ]
+    }
+   ],
+   "source": [
+    "for k,v in my_dictionary.items(): #items grazina pora, abi vertes\n",
+    "    print(f'key {k} has a value of {v}')"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
