--- a/paskaita_3_new.ipynb
+++ b/paskaita_3_new.ipynb
@@ -1341,6 +1341,123 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Dictionary uzduotys"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 1. Atspausdinkite 'Ford', gaukite zodyno car ilgi, pakeiskite metus i 2022.\n",
+    "\n",
+    "car = {\n",
+    "    \"brand\" : \"Ford\",\n",
+    "    \"model\" : \"Mustang\",\n",
+    "    \"year\" : 1964\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'brand': 'Ford', 'model': 'Mustang', 'year': 2022}\n",
+      "Ford\n",
+      "3\n",
+      "{'brand': 'Ford', 'model': 'Mustang', 'year': 2022}\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(car)\n",
+    "print(car['brand'])\n",
+    "print(len(car))\n",
+    "car['year'] = 2022\n",
+    "print(car)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'brand': 'Ford', 'model': 'Mustang', 'year': 2022, 'color': 'red', 'used': True}\n",
+      "{'brand': 'Ford', 'model': 'Mustang', 'year': 2022, 'color': 'red', 'used': True}\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 2. Prie esamo zodyno pridekite naujas reiksmes\n",
+    "\n",
+    "car['color'] = 'red'\n",
+    "car['used'] = True\n",
+    "print(car)\n",
+    "\n",
+    "\n",
+    "car.update({'color' : 'red', 'used' : True})\n",
+    "print(car)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'brand': 'Ford', 'year': 1992, 'color': 'red', 'used': True}\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 3. Is esamo zodyno istrinti 'brand' rakta ir reiksme, o year reiksme paverskite i None\n",
+    "\n",
+    "car = {\n",
+    "    \"brand\" : \"Ford\",\n",
+    "    \"year\" : 1992,\n",
+    "    \"color\" : 'red',\n",
+    "    \"used\" : True\n",
+    "}\n",
+    "\n",
+    "print(car)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'year': None, 'color': 'red', 'used': True}\n"
+     ]
+    }
+   ],
+   "source": [
+    "car.pop('brand')\n",
+    "car['year'] = None\n",
+    "print(car)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
