--- a/paskaita_4_new.ipynb
+++ b/paskaita_4_new.ipynb
@@ -195,6 +195,239 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "True\n",
+      "False\n",
+      "False\n"
+     ]
+    }
+   ],
+   "source": [
+    "my_set_1 = {5,6}\n",
+    "my_set_2 = {4,5,6,7,10,11}\n",
+    "\n",
+    "print(my_set_1.issubset(my_set_2)) #visi 1 seto nariai yra antro seto nariai del to true\n",
+    "print(my_set_2.issuperset(my_set_1)) # ar didesniame sete yra tas mazesnis\n",
+    "\n",
+    "my_set_1 = {5,6,15}\n",
+    "print(my_set_1.issubset(my_set_2)) #ne visi nariai yra 2 seto dalis tai false\n",
+    "print(my_set_2.issuperset(my_set_1))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Set uzduotys"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{('nauja reiksme', 5), 'banana', 'cherry', 'apple'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 1. Pridekite reiksme\n",
+    "\n",
+    "fruits = {'apple', 'banana', 'cherry'}\n",
+    "fruits.add(('nauja reiksme',5))\n",
+    "print(fruits)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'banana', 'cherry'}\n",
+      "{'banana', 'watermelon', 'cherry'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 2. Pakeiskite reiksme\n",
+    "\n",
+    "fruits = {'apple', 'banana', 'cherry'} #pakeisti apple i watermelon\n",
+    "\n",
+    "fruits.remove('apple')\n",
+    "print(fruits)\n",
+    "fruits.add('watermelon')\n",
+    "print(fruits)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'banana', 'cherry', 'apple'}\n",
+      "{'banana', 'watermelon', 'cherry', 'apple'}\n",
+      "{'lime', 'orange', 'cherry', 'watermelon', 'pineapple', 'banana', 'mango', 'pear', 'apple'}\n",
+      "{'lime', 'orange', 'cherry', 'watermelon', 'pineapple', 'banana', 'mango', 'pear'}\n",
+      "8\n",
+      "8\n"
+     ]
+    }
+   ],
+   "source": [
+    "fruits = {'apple', 'banana', 'cherry'}\n",
+    "print(fruits)\n",
+    "fruits.add('watermelon')\n",
+    "print(fruits)\n",
+    "fruits.update( ['pear', 'mango', 'lime', 'pineapple', 'orange'] )\n",
+    "print(fruits)\n",
+    "fruits.discard('apple')\n",
+    "print(fruits)\n",
+    "print(len(fruits))\n",
+    "fruits.add('watermelon') # jei pridedam, kas egzistuoja, tai niekas nepasikeicia\n",
+    "print(len(fruits))\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Functions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# funkcijos yra naudingos tuo, kad gali priimti argumentus ir ta pati koda pritaikyti skirtingiems duomenims tiek kartu kiek reikia ir kada reikia\n",
+    "# funkcijos kodas nera vykdomas iki kol ji yra iskvieciama\n",
+    "# funkcija desineje priima argumenta ir ji atspausdina, tai reiskia, kad funkcijos yra universalios,\n",
+    "# galime iskviesti f-ja kas karta nurodydami skirtinga argumenta ar kelis argumentus\n",
+    "# argumentais gali buti bet kokie duomenu tipai, taip pat funkcija gali priimti kita funkcija kaip argumenta\n",
+    "\n",
+    "# tai leidzia tai ka mes jau esame sukure panaudoti ir vel, taip plesti visas galimybes ir greiciau atlikti dalykus"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def mano_funkcija(): #funkcija, kuri neturi argumentu\n",
+    "    print('hello world') # funkcijos aprasymas, kol kas dar nepaleista, del to nk nemeta"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hello world\n",
+      "hello world\n",
+      "hello world\n"
+     ]
+    }
+   ],
+   "source": [
+    "mano_funkcija() # dabar jau paleista\n",
+    "mano_funkcija()\n",
+    "mano_funkcija()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def mano_funkcija_2 (name): # funkcija priema viena argumenta name\n",
+    "    print(f'Hello {name}, how is your day?')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello Tomas, how is your day?\n",
+      "Hello Helena, how is your day?\n",
+      "Hello Ernesta, how is your day?\n"
+     ]
+    }
+   ],
+   "source": [
+    "mano_funkcija_2('Tomas')\n",
+    "mano_funkcija_2('Helena')\n",
+    "mano_funkcija_2('Ernesta')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def substract(num_1, num_2):\n",
+    "    print(num_1 - num_2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "7\n",
+      "7\n",
+      "-7\n"
+     ]
+    }
+   ],
+   "source": [
+    "substract(12,5) # poziciniai argumentai, pagal pozicija suteikiamos reiksmes. 12 nueina i num_1, o 5 nueina i num_2.\n",
+    "\n",
+    "# butina nurodyti, jei nenurodyta jokie argumentai, mes klaida\n",
+    "\n",
+    "substract(num_1 = 12, num_2 = 5) # galima nurodyti, kuris skaicius kokiam argumentui turi priklausyti\n",
+    "substract(num_2 = 12, num_1 = 5) # galima apkeisti  num_1 - num_2 vis tiek galios\n",
+    "\n",
+    "#privalomi argumentai, pagal pozicija yra priskiriami\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
