--- a/paskaita_4_new.ipynb
+++ b/paskaita_4_new.ipynb
@@ -392,12 +392,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [],
    "source": [
     "def substract(num_1, num_2):\n",
-    "    print(num_1 - num_2)"
+    "    local_variable = 10\n",
+    "    print(num_1 - num_2)\n",
+    "    return num_1 - num_2\n",
+    "    print('niekada neatspausdins')"
    ]
   },
   {
@@ -423,7 +426,208 @@
     "substract(num_1 = 12, num_2 = 5) # galima nurodyti, kuris skaicius kokiam argumentui turi priklausyti\n",
     "substract(num_2 = 12, num_1 = 5) # galima apkeisti  num_1 - num_2 vis tiek galios\n",
     "\n",
+    "\n",
+    "\n",
     "#privalomi argumentai, pagal pozicija yra priskiriami\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 89,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "7\n",
+      "7\n",
+      "-7\n",
+      "-7\n"
+     ]
+    },
+    {
+     "ename": "NameError",
+     "evalue": "name 'local_variable' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32mc:\\Users\\laima\\Desktop\\Python_mokymai\\Python_mokymai\\paskaita_4_new.ipynb Cell 25'\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/laima/Desktop/Python_mokymai/Python_mokymai/paskaita_4_new.ipynb#ch0000026?line=2'>3</a>\u001b[0m result \u001b[39m=\u001b[39m substract(num_2 \u001b[39m=\u001b[39m \u001b[39m12\u001b[39m, num_1 \u001b[39m=\u001b[39m \u001b[39m5\u001b[39m)\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/laima/Desktop/Python_mokymai/Python_mokymai/paskaita_4_new.ipynb#ch0000026?line=3'>4</a>\u001b[0m \u001b[39mprint\u001b[39m(result)\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/laima/Desktop/Python_mokymai/Python_mokymai/paskaita_4_new.ipynb#ch0000026?line=4'>5</a>\u001b[0m \u001b[39mprint\u001b[39m(local_variable)\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'local_variable' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "substract(12,5)\n",
+    "substract(num_1 = 12, num_2 = 5)\n",
+    "result = substract(num_2 = 12, num_1 = 5)\n",
+    "print(result)\n",
+    "print(local_variable) # kas vyksta fjoje, tas lieka ten,jei sukuriam kintamaji funkcijoje, kai fja baigiasi, tie kintamieji yra sunaikinami ir info is ju dingsta\n",
+    "\n",
+    "# reikia kad funkcija grazintu reiksme, tam yra return, po juo nurodom ka norim kad musu fja grazintu atgal kur buvo iskviesta jinai\n",
+    "# return komanda grizta i vieta kur buvo jinai iskviesta\n",
+    "# result yra kintamasis, kur issaugom ka gaunam is fjos substract(num_2 = 12, num_1 = 5)\n",
+    "# issisaugo rezultata ir naudoja kur nori\n",
+    "# fjos yra izoliuotos aplinkos"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 97,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# funkcijos, kurios turi argumentus su numatytomis reiksmemis\n",
+    "# OPTIONAL ARGUMENTS \n",
+    "\n",
+    "def add_number(num_1, num_2 = 10): #galim nuordyti, kad antro skaiciaus numatyta reiksme 10, o num_1 privalomas\n",
+    "    return num_1 + num_2 # fjose print fjos nebenaudosim, naudosim return kad grazintu ta rezultata ir paskui atspausdini\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 98,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "23\n",
+      "13\n",
+      "53\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(add_number(3, 20))\n",
+    "print(add_number(3) ) # jei nenurodom num_2, naudos numatyta reiksme, kuri yra 10\n",
+    "print(add_number(3, 50)) # galima arba nenurodyti, arba savo prideti"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 99,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ds df 5 45\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('ds' , 'df' , 5 , 45)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 104,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def add_all_numbers(*args): #reiksmes sudedamos i viena sarasa  ds df 5 45\n",
+    "    print(args)\n",
+    "    suma = 0 # vieta, kur laikom tarpini rezultata, prie jos kiekvieno ciklo metu pridedam po skaiciu, kad vis akumuliuotu ta suma\n",
+    "    for number in args:\n",
+    "        suma += number\n",
+    "    return suma\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 103,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(5, 6, 1, 20, -10)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "22"
+      ]
+     },
+     "execution_count": 103,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "add_all_numbers(5, 6, 1, 20, -10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 107,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def add_all_numbers (arg_1, arg_2, arg_3):\n",
+    "    if arg_1 > 5:\n",
+    "        return 0\n",
+    "    elif arg_2 < 0:\n",
+    "        return 10\n",
+    "    else:\n",
+    "        return 100"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 113,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def better_function (arg_1, arg_2, arg_3): # reikia kuo maziau if salygu\n",
+    "    result = None # isivedam kintamaji\n",
+    "    if arg_1 > 5:\n",
+    "        if arg_3 > 0:\n",
+    "            result = 10\n",
+    "        else:\n",
+    "            result = 0\n",
+    "    elif arg_2 < 0:\n",
+    "        print(arg_2)\n",
+    "        result = 10\n",
+    "    else:\n",
+    "        result = 100\n",
+    "    print(arg_2)\n",
+    "    print (result)\n",
+    "    return result"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 114,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5\n",
+      "10\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "10"
+      ]
+     },
+     "execution_count": 114,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "better_function(10,5,2)"
    ]
   },
   {
@@ -431,7 +635,194 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# **kwargs - cia sutalpinsime visus naujus argumentus, kurie turi pavadinimus"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 128,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def say_hello_2 (name, num_1, num_2 = 10, **kwargs): # du privalomi argumentai, vienas neprivalomas ir **kwargs (keyword arguments)\n",
+    "    print(f'hello {name}')\n",
+    "    print(num_1 + num_2)\n",
+    "    #print(kwargs) #atspaudinus gauname {}, nes nepateikeme papildomu papildomu kwargs\n",
+    "    for k,v in kwargs.items(): # .items grazina du dalykus, del to atskiriam kad pirmas dalykas yra K o antras V\n",
+    "        print(f'key {k} have a value of {v}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 129,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hello Juste\n",
+      "15\n"
+     ]
+    }
+   ],
+   "source": [
+    "say_hello_2('Juste', 5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 132,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hello Juste\n",
+      "15\n",
+      "key surname have a value of Leisyte\n",
+      "key no have a value of ne\n"
+     ]
+    }
+   ],
+   "source": [
+    "say_hello_2('Juste', 5, surname = 'Leisyte', no = 'ne') # trecias yra kwargs, grazina dict su K surname ir V Leisyte\n",
+    "#kwargs yra dict, no = 'ne' nueina i kwargs, kuris yra dictionary, kuriame keywords yra sugalvoti pavadinimai argumentu\n",
+    "# o vertes yra nurodytos po lygybes zenklu\n",
+    "# no argumento nera, tai automatiskai nueisi i kwargs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 133,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def mano_funkcija_2 (name): # galime parasyti paaiskinima apie fja\n",
+    "    \"\"\"\n",
+    "    This function says hello to <name>, and asks how are they.\n",
+    "    \"\"\"\n",
+    "    # ^^^ Docstring\n",
+    "    print (f'Hello {name}, how is your day?')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mano_funkcija_2()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 136,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def dummy_function(\n",
+    "    argument_1,\n",
+    "    argument_2,\n",
+    "    argument_3,\n",
+    "    optional_argument = 10\n",
+    "):\n",
+    "    \"\"\"\n",
+    "    dummy function\n",
+    "    \"\"\"\n",
+    "    return 0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 142,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "bye\n",
+      "bye\n"
+     ]
+    }
+   ],
+   "source": [
+    "# bye() # error, function not defined\n",
+    "\n",
+    "def bye():\n",
+    "    print ('bye')\n",
+    "bye()\n",
+    "\n",
+    "new_bye = bye\n",
+    "new_bye()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Function uzduotys"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Deklaruokite funkcija kuri priima du skaicius, jeigu skaiciu suma lygine, grazinkite su sandauga, jei ne, padalinkite skaicius viena is kito\n",
+    "\n",
+    "#myFunction(2,6) -> 12\n",
+    "#myFunction(10,5) -> 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 149,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def funkcija (num_1, num_2):\n",
+    "    if (num_1 + num_2) % 2 == 0:\n",
+    "        return num_1 * num_2\n",
+    "    #else: #else dalis siuo atveju nera butina\n",
+    "    return num_1 / num_2 # jei atitiks if salyga, grazins num_1 * num_2 ir toliau nebeis, jei neatitinka, pereis i return num_1/num_2\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 150,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "12\n",
+      "2.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(funkcija(2,6))\n",
+    "print(funkcija(10,5))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 2. Deklaruokite funkcija, kuri priima viena string tipo kintamaji, priskirkite funkcija naujam kintamajam\n",
+    "# ir iskvieskite ja per naujaji kintamaji\n",
+    "\n",
+    "#my_function_variable = myFunction\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
