--- a/paskaita_5.ipynb
+++ b/paskaita_5.ipynb
@@ -687,6 +687,67 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### CSV formatas"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Jason formatas panasus i dict, duomenim laikyti\n",
+    "\n",
+    "# failo rasymas\n",
+    "\n",
+    "import json\n",
+    "\n",
+    "my_dict = {\n",
+    "    'name' : 'Juste',\n",
+    "    'age' : 24,\n",
+    "    'hobbies' : ['games', 'painting']\n",
+    "}\n",
+    "\n",
+    "with open('me.json.', 'w') as file_write:\n",
+    "    json.dump(my_dict,file_write)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# failo perskaitymas atgal \n",
+    "\n",
+    "with open('me.json.', 'r') as file_read:\n",
+    "    my_dict_2 = json.load(file_read)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'name': 'Juste', 'age': 24, 'hobbies': ['games', 'painting']}"
+      ]
+     },
+     "execution_count": 71,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "my_dict_2"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
